# python-opnsense

./: .editorconfig  .gitignore  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: merge.yaml  publish.yaml  unit-tests.yaml
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source_old/: conf.py  index.rst
integrationtests/: test_interfaces.py  utils.py
opnsense_api/: __init__.py  util.py
opnsense_api/diagnostics/: __init__.py  diagnostics_dataclasses.py  interface_diagnostics_controller.py  netflow_diagnostics_controller.py  system_diagnostics_controller.py
opnsense_api/firewall/: __init__.py  alias_controller.py  category_controller.py  filter_controller.py
opnsense_api/interfaces/: __init__.py  loopback_controller.py  vip_controller.py  vlan_controller.py  vxlan_controller.py
opnsense_api/routing/: __init__.py  route_controller.py
opnsense_api/unbound/: __init__.py  alias_controller.py  controller.py  domain_controller.py  host_controller.py  resource_controller.py  service_controller.py  util.py
opnsense_api/util/: __init__.py  applicable_item_controller.py  controller.py  exceptions.py  item_controller.py  parse.py  validate.py
src/python-opnsense/: __init__.py
test/firewall/: test_alias_controller.py  test_category_controller.py
test/integration/: test_unbound.py
tests/: test_diagnostics.py  test_interfaces.py  test_routes.py  test_unbound.py  utils.py
tests/integration/: test_interfaces.py  test_unbound.py  utils.py
(+160 files in other folders)
