[metadata]
name = python-opnsense-dylanturnbull
version = 0.0.1
author = Dylan Turnbull
author_email = dylanturn@gmail.com
description = A python library that interacts with an Opnsense API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/turnbros/python-opnsense
project_urls =
    Bug Tracker = https://github.com/turnbros/python-opnsense/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src